--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment-five</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="font-family: 'Poppins', sans-serif;">
+    <header>
+        <h1 class="text-4xl text-center mt-10 font-semibold text-teal-600">Monthly Finance Statement</h1>
+    </header>
+    <main>
+        <section class="m-6">
+            <div class="grid md:grid-cols-2 grid-cols-1 gap-4">
+                <div>
+                    <img src="images/assignmet-5.jpg" alt="">
+                </div>
+                <div class="text-center">
+                    <h4 class="text-lg mb-2 font-semibold">Income</h4>
+                    <p>Income : <input class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
+                    <h4 class="text-lg mb-2 font-semibold">Expence</h4>
+                    <p>Food : <input class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
+                    <p>Rent : <input class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
+                    <p>Clothes : <input class="border mb-4  w-1/2 rounded border-gray-400" type="text"></p>
+                    <button class="bg-teal-600 mb-2 rounded px-4 py-2 text-white fonnt-semibold">Calculate</button>
+                    <h4 class="text-lg font-semibold">Total Expences : 5500</h4>
+                    <h4 class="text-lg  font-semibold">Balance : 4500</h4>
+                    <p>Save : <input class="border mb-4 w-20 rounded border-gray-400" type="text"> % <button
+                            class="bg-teal-600 rounded px-4 py-2 text-white fonnt-semibold">Save</button>
 
+                    </p>
+                    <h4 class="text-lg  font-semibold">Saving Amount : 5500</h4>
+                    <h4 class="text-lg  font-semibold">Remaining Balance : 5500</h4>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+
+    <script>
+
+    </script>
 </body>
 
 </html>
