--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
                 </div>
                 <div class="text-center">
                     <h4 class="text-lg mb-2 font-semibold">Income</h4>
-                    <p>Income : <input class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
+                    <p>Income : <input id="income-input" class="border mb-4 w-1/2 rounded border-gray-400" type="text">
+                    </p>
                     <h4 class="text-lg mb-2 font-semibold">Expence</h4>
-                    <p>Food : <input class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
-                    <p>Rent : <input class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
-                    <p>Clothes : <input class="border mb-4  w-1/2 rounded border-gray-400" type="text"></p>
-                    <button class="bg-teal-600 mb-2 rounded px-4 py-2 text-white fonnt-semibold">Calculate</button>
+                    <p>Food : <input id="food-input" class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
+                    <p>Rent : <input id="rent-input" class="border mb-4 w-1/2 rounded border-gray-400" type="text"></p>
+                    <p>Clothes : <input id="clothes-input" class="border mb-4  w-1/2 rounded border-gray-400"
+                            type="text"></p>
+                    <button id="calculate-btn"
+                        class="bg-teal-600 mb-2 rounded px-4 py-2 text-white fonnt-semibold">Calculate</button>
                     <h4 class="text-lg font-semibold">Total Expences : 5500</h4>
                     <h4 class="text-lg  font-semibold">Balance : 4500</h4>
                     <p>Save : <input class="border mb-4 w-20 rounded border-gray-400" type="text"> % <button
@@ -45,9 +48,7 @@
 
 
 
-    <script>
-
-    </script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
