--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                             type="text"></p>
                     <button id="calculate-btn"
                         class="bg-teal-600 mb-2 rounded px-4 py-2 text-white fonnt-semibold">Calculate</button>
-                    <h4 class="text-lg font-semibold">Total Expences : 5500</h4>
-                    <h4 class="text-lg  font-semibold">Balance : 4500</h4>
-                    <p>Save : <input class="border mb-4 w-20 rounded border-gray-400" type="text"> % <button
+                    <h4 class="text-lg font-semibold">Total Expences : <span id="total-expance">5500</span></h4>
+                    <h4 class="text-lg  font-semibold">Balance : <span id="total-balance">4500</span></h4>
+                    <p>Save : <input id="save-input" class="border mb-4 w-20 rounded border-gray-400" type="text"> %
+                        <button id="save-btn"
                             class="bg-teal-600 rounded px-4 py-2 text-white fonnt-semibold">Save</button>
 
                     </p>
