--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-five</title>
+    <!-- link tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- link tailwind -->
+    <!-- goggle font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- goggle font link -->
 </head>
 
 <body style="font-family: 'Poppins', sans-serif;">
@@ -51,8 +55,9 @@
     </main>
 
 
-
+    <!-- js file link -->
     <script src="js/index.js"></script>
+    <!-- js file link -->
 </body>
 
 </html>
