some more alignment corrected

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     </header>
     <main>
         <section class="m-8">
-            <div class="grid md:grid-cols-2 grid-cols-1 gap-4">
+            <div class="grid md:grid-cols-2 grid-cols-1 gap-20">
                 <div>
                     <img class="w-full" src="images/assignmet-5-1.jpg" alt="">
                 </div>
-                <div class="mx-16">
+                <div>
                     <h4 class="text-lg mb-2 font-semibold">Income</h4>
                     <p>Income :
                     </p>
-                    <input id="income-input" class="border mb-4 w-1/2 rounded px-2 border-gray-400" type="text">
+                    <input id="income-input" class="border mb-4 w-4/5 rounded px-2 border-gray-400" type="text">
                     <h4 class="text-lg mb-2 font-semibold">Expences</h4>
                     <p>Food : </p>
-                    <input id="food-input" class="border px-2  mb-4 w-1/2 rounded border-gray-400" type="text">
+                    <input id="food-input" class="border px-2  mb-4 w-4/5 rounded border-gray-400" type="text">
                     <p>Rent : </p>
-                    <input id="rent-input" class="border px-2  mb-4 w-1/2 rounded border-gray-400" type="text">
+                    <input id="rent-input" class="border px-2  mb-4 w-4/5 rounded border-gray-400" type="text">
                     <p>Clothes: </p>
-                    <input id="clothes-input" class="border px-2 mb-4  w-1/2 rounded border-gray-400" type="text">
+                    <input id="clothes-input" class="border px-2 mb-4  w-4/5 rounded border-gray-400" type="text">
                     <button id="calculate-btn"
                         class="block bg-teal-600 mb-2 rounded px-4 py-2 text-white fonnt-semibold">Calculate</button>
                     <div id="alart-paragraph"
